# miniassistant

./: CONFIGURATION.md  Dockerfile  LICENSE  OPENAI_API.md  README.md  install.sh  pyproject.toml  requirements.txt  update.sh
clients/maclient/: README.md  go.mod  main.go
clients/miniclient/: README.md  go.mod  main.go
docker/: entrypoint.sh
docs/: API_REFERENCE.md  CONFIG_REFERENCE.md  CONTEXT_SIZE.md  DISCORD.md  GITHUB.md  IMAGE_GENERATION.md  MATRIX.md  PLANNING.md  SCHEDULES.md  SEARCH_ENGINES.md  SUBAGENTS.md  VISION.md
init.d/: miniassistant
miniassistant/: __init__.py  agent_actions_log.py  agent_loader.py  anubis.py  cancellation.py  chat_auth.py  chat_loop.py  claude_client.py  cli.py  config.py  context_log.py  debug_log.py  discord_bot.py  documents.py  google_client.py  group_rooms.py  image_registry.py  matrix_auth.py  matrix_bot.py  memory.py  notify.py  ollama_client.py  openai_client.py  sandbox.py  scheduler.py  secret_mask.py  slot_cache.py  tools.py  usage.py  voice_format.py  webhooks.py  wyoming_client.py
miniassistant/advanced_prompts/: aio.md  aio_caveman.md  loader.py
miniassistant/basic_rules/: __init__.py  exec_behavior.md  group_room.md  knowledge_verification.md  language.md  loader.py  safety.md  subagent.md  webhook.md
miniassistant/docs/: API_REFERENCE.md  AVATARS.md  CONFIG_REFERENCE.md  DEBATE.md  DIRECTIONS.md  DISCORD.md  DOCUMENTS.md  EMAIL.md  GITHUB.md  GROUP_ROOMS.md  IMAGE_GENERATION.md  MATRIX.md  PLANNING.md  PROVIDERS.md  SCHEDULES.md  SLOT_CACHE.md  SUBAGENTS.md  VOICE.md  WEBHOOKS.md  WEB_FETCHING.md  loader.py  plan_group_rooms.md  plan_slot_cache.md  (+1 more)
systemd/: miniassistant.service
(+4 files in other folders)
